Revert "fix: match hero button font style on mobile to desktop"
This reverts commit 4a6bf083480696dd638bd542130f95ec8a3ea092.

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -52,11 +52,6 @@
 }
 
 /* Reset */
-html {
-  -webkit-text-size-adjust: 100%;
-  text-size-adjust: 100%;
-}
-
 *, *::before, *::after {
   box-sizing: border-box;
   margin: 0;
